# over-the-wire_utumno-solutions

./: README.md  level0.py  level1.py  level2.py  level3.py  level4.py  level5.py  level6-huge-off.py  level6-pointer.py  level6.py  level7.py  requirements.txt
0/: puts-hook.c
2/: wrapper.cpp
3/: wrapper.cpp
3/reverse/: CMakeLists.txt  program.c  reverse  reverse.c
4/test/: CMakeLists.txt  main.c
4/utumno/: .gdb_history  amount_to_copy  gdb.script  payload
5/: wrapper.cpp
5/lib/: ld-linux.so.2
6/test/: main.c
7/utumno/: .gdb_history  gdb.script  jbp  payload  snapshot
lib/: exploit.py
